Add Chung-Heng to the authors list and license.

--- a/AUTHORS
+++ b/AUTHORS
@@ -8,6 +8,7 @@ This software was written by
 * Daniel S. Chevitarese
 * Lev Givon
 * Nikul H. Ukani
+* Chung-Heng Yeh
 * Yiyin Zhou
 
 under the supervision of Prof. Aurel A. Lazar [2]_. As of 2012, all
