Also remove pytables from Jetson notebook.

--- a/notebooks/JetsonTK1.ipynb
+++ b/notebooks/JetsonTK1.ipynb
@@ -202,7 +202,7 @@
    },
    "outputs": [],
    "source": [
-    "pip install numpy scipy ipython cython numexpr tables pycuda\n",
+    "pip install numpy scipy ipython cython numexpr pycuda\n",
     "pip install bidict pandas networkx mpi4py h5py dill lxml markupsafe shutilwhich ply psutil futures twiggy matplotlib\n",
     "pip install sphinx sphinx_rtd_theme"
    ]
