updated ec2 notebook with a new AMI

--- a/notebooks/ec2.ipynb
+++ b/notebooks/ec2.ipynb
@@ -67,7 +67,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, change your region to US East and search in the public images for Neurokernel. Click on the one with AMI ID: ami-8bdd97e1. Then click Launch button on the top.\n",
+    "First, change your region to US East and search in the public images for Neurokernel. Click on the one with AMI ID: ami-3776735d. Then click Launch button on the top.\n",
     "<img src='files/files/ec2-ami-1.png' />"
    ]
   },
@@ -143,6 +143,8 @@
    "outputs": [],
    "source": [
     "cd ~/neurokernel\n",
+    "git pull\n",
+    "cd ~/neurodriver\n",
     "git pull"
    ]
   },
@@ -161,11 +163,11 @@
    },
    "outputs": [],
    "source": [
-    "cd ~/neurokernel/examples/intro/data\n",
+    "cd ~/neurodriver/examples/intro/data\n",
     "python gen_generic_lpu.py -s 0 -l lpu_0 generic_lpu_0.gexf.gz generic_lpu_0_input.h5                \n",
     "python gen_generic_lpu.py -s 1 -l lpu_1 generic_lpu_1.gexf.gz generic_lpu_1_input.h5\n",
     "cd ../\n",
-    "python intro_demo.py --gpu_dev 0 0"
+    "python intro_demo.py --gpu_dev 0 0 --log file"
    ]
   },
   {
@@ -200,7 +202,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In step 1, choose Ubuntu Server 14.04 LTS (HVM), SSD Volume Type - ami-d05e75b8.\n",
+    "In step 1, choose Ubuntu Server 14.04 LTS (HVM), SSD Volume Type - ami-d05e75b8 (The AMI number may differ, as they are frequently updated).\n",
     "<img src='files/files/ec2-launch-step1.png' />"
    ]
   },
@@ -273,7 +275,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To this point, you will be prompted \"What would you like to do about menu.lst?\". Select: \"keep the local version currently installed\". Wait until the upgrade is finished and execute the following commands"
+    "To this point, you may be prompted \"What would you like to do about menu.lst?\". Select: \"keep the local version currently installed\". Wait until the upgrade is finished and execute the following commands"
    ]
   },
   {
@@ -285,14 +287,14 @@
    "outputs": [],
    "source": [
     "sudo apt-get install build-essential\n",
-    "sudo apt-get install linux-image-extra-virtual\n"
+    "sudo apt-get install linux-image-extra-virtual"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You will be prompted again with \"What would you like to do about menu.lst?\". Select again: \"keep the local version currently installed\". Wait until the end of the installation and execute the following commands"
+    "You may be prompted again with \"What would you like to do about menu.lst?\". Select again: \"keep the local version currently installed\". Wait until the end of the installation and execute the following commands"
    ]
   },
   {
@@ -345,9 +347,9 @@
    "source": [
     "mkdir packages\n",
     "cd packages\n",
-    "wget http://us.download.nvidia.com/XFree86/Linux-x86_64/352.63/NVIDIA-Linux-x86_64-352.63.run\n",
-    "chmod u+x NVIDIA-Linux-x86_64-352.63.run\n",
-    "sudo ./NVIDIA-Linux-x86_64-352.63.run"
+    "wget http://us.download.nvidia.com/XFree86/Linux-x86_64/361.28/NVIDIA-Linux-x86_64-361.28.run\n",
+    "chmod u+x NVIDIA-Linux-x86_64-361.28.run\n",
+    "sudo ./NVIDIA-Linux-x86_64-361.28.run "
    ]
   },
   {
@@ -401,7 +403,8 @@
    },
    "outputs": [],
    "source": [
-    "echo -e \"export PATH=/usr/local/cuda-7.5/bin:\\$PATH\\nexport LD_LIBRARY_PATH=/usr/local/cuda-7.5/lib64:\\$LD_LIBRARY_PATH\" | tee -a ~/.bashrc"
+    "echo -e \"export PATH=/usr/local/cuda-7.5/bin:\\$PATH\\nexport LD_LIBRARY_PATH=/usr/local/cuda-7.5/lib64:\\$LD_LIBRARY_PATH\" | tee -a ~/.bashrc\n",
+    "source ~/.bashrc"
    ]
   },
   {
@@ -487,7 +490,8 @@
    "source": [
     "cd\n",
     "rm -rf packages\n",
-    "git clone https://github.com/neurokernel/neurokernel.git"
+    "git clone https://github.com/neurokernel/neurokernel.git\n",
+    "git clone https://github.com/neurokernel/neurodriver.git"
    ]
   },
   {
@@ -500,6 +504,8 @@
    "source": [
     "source activate NK\n",
     "cd ~/neurokernel\n",
+    "python setup.py develop\n",
+    "cd ~/neurodriver\n",
     "python setup.py develop"
    ]
   },
@@ -518,7 +524,7 @@
    },
    "outputs": [],
    "source": [
-    "cd ~/neurokernel/examples/intro/data\n",
+    "cd ~/neurodriver/examples/intro/data\n",
     "python gen_generic_lpu.py -s 0 -l lpu_0 generic_lpu_0.gexf.gz generic_lpu_0_input.h5                \n",
     "python gen_generic_lpu.py -s 1 -l lpu_1 generic_lpu_1.gexf.gz generic_lpu_1_input.h5\n",
     "cd ../\n",
@@ -549,7 +555,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
