added image for spot instance on ec2 notebook

--- a/notebooks/ec2.ipynb
+++ b/notebooks/ec2.ipynb
@@ -84,7 +84,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In step 3: leave the default setting for instance details, or customize it according to your needs."
+    "In step 3: leave the default setting for instance details, or customize it according to your needs. You can also request a [spot instance](https://aws.amazon.com/ec2/spot/), which can significantly lower your cost (but the instance can be taken down once the current price is higher than your maximum bid price). For example, you can bid your price and launch the instance in a specific subnet that corresponds to the one having the lowest cost.\n",
+    "<img src='files/files/ec2-launch-step3.png' />"
    ]
   },
   {
@@ -168,6 +169,20 @@
     "python gen_generic_lpu.py -s 1 -l lpu_1 generic_lpu_1.gexf.gz generic_lpu_1_input.h5\n",
     "cd ../\n",
     "python intro_demo.py --gpu_dev 0 0 --log file"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, you can use Neurokernel on the EC2 instance."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# The following is intended for more advanced users, and is not required to run Neurokernel on EC2"
    ]
   },
   {
@@ -555,7 +570,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
